--- a/index.html
+++ b/index.html
@@ -93,7 +93,7 @@
 <body>
   <div class="top">
     <img src="titulo.png" alt="Ranking Game ON" class="title-img"/>
-    <div class="subtitle">Acompanhe a classificação em tempo real 🏆</div>
+    <div class="subtitle">Acompanhe a classificação em tempo real no Centro de Estudos🏆</div>
   </div>
 
   <div class="table-wrap">
@@ -116,7 +116,7 @@
 
   <script>
     // URL do Web App do Google Apps Script (com parâmetro action=ranking)
-    const WEBAPP_URL ='https://script.google.com/macros/s/AKfycbzcXQGnggMk5Jp2bUuPTSdn3nFOVwQHS8_cI16Tv6UAibjJSDm2qIulAvbb2OTI6pY/exec?action=ranking';
+    const WEBAPP_URL ='https://script.google.com/macros/s/AKfycbxlsEEL_xzknpgv9p_lTKkw26A7G1KkSTCHaG3L1gPHYQM874lma1K1LRtWvdozAwqg/exec?action=ranking';
 
     // Callback JSONP chamado pelo Web App com o array de ranking
     function showRanking(data){
